# l3-fastapi-osmthome-backend

./: .env  .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
src/: config.py  main.py
src/auth/: constants.py  exceptions.py  router.py  service.py
src/vessel/: config.py  database.py  router.py  service.py
